--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter_svg: ^2.1.0
   iconsax_flutter: ^1.0.0
+  simple_numpad: ^1.0.5
 
 dev_dependencies:
   flutter_test:
