--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.1.0
   iconsax_flutter: ^1.0.0
   simple_numpad: ^1.0.5
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
