--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   iconsax_flutter: ^1.0.0
   simple_numpad: ^1.0.5
   flutter_secure_storage: ^9.2.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
