--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   simple_numpad: ^1.0.5
   flutter_secure_storage: ^9.2.4
   cached_network_image: ^3.4.1
+  redacted: ^1.0.13
 
 dev_dependencies:
   flutter_test:
