--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   cached_network_image: ^3.4.1
   redacted: ^1.0.13
+  fl_chart: ^0.66.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
