--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   redacted: ^1.0.13
   fl_chart: ^0.66.1
   jwt_decoder: ^2.0.1
+  overlay_kit: ^1.1.2
 
 dev_dependencies:
   flutter_test:
